---- Changes since 3.54 ----
Updated the osTicket script installer to version 1.6.rc4, Instiki to 0.13.0, Flyspray to 0.9.9.5.1, and Php-Wiki to 1.2.11. Also added the latest 1.70+ build of LimeSurvey.
New DNS domains have the localhost A record added, with an IP of 127.0.0.1.
When a script is installed into a path that is already served by a proxy (such as for a rails application on /), a negating proxy rule is added so that the script is accessible.
When migrating a domain from other control panel like Plesk, you can now select to have to downloaded directly from a remote FTP or SSH server. The migrate-domain.pl command-line script also allows use of ftp:// or ssh:// URLs for backup sources.
If the skeleton directory contains a public_html sub-directory, it is copied to a sub-domain's web pages directory when the domain is created.
For alias domains whose virtusers are always copied from the target, no home directory is created (as it isn't needed).
The path to the public_html and cgi-bin directories is now stored in each new domain's data file, so that they are correctly preserved when the path is changed in the template, or the domain is moved to another system with a different directory name.
Basic Exim support, thanks to Bill Moyers and John Gray.
When migrating a cPanel, Plesk or Ensim backup, the original domain name can now be worked out automatically, as long as the backup contains just one.
For new installs, new features in older versions are not shown on the System Information page.
Fixed the modification of Webalizer and Logrotate config files when a domain's Apache logs are outside it's home directory.
Apache logs outside a domain's home directory are now included in backups and restores.
Added the --delete-existing flag to migrate-domain.pl, to remove any existing virtual server with the same name before re-migrating.
Plesk sub-domains are now included with migrating, including any users for managing their content.