@@ -160,3 +160,4 @@ bccs=0
 bw_nomailout=0
 show_nf=master,reseller,domain
 from_reseller=0
+collect_interval=5
